# library_reservation

./: .gitignore  BookInfo.py  Dockerfile  README.md  booklog_test.py  build.sh  classfy_list.py  classfy_list_bunkyo.py  classfy_list_ichikawa.py  classify_list.py  clear_reserve_basket.py  clear_reserve_basket_ichikawa.py  create_database_bunkyo.sh  create_owning_or_reserving_booklist.py  create_owning_or_reserving_booklist_bunkyo.py  create_owning_or_reserving_booklist_ichikawa.py  daily.sh  daily_ichikawa.sh  docker-compose.yml  download_booklist.py  example.py  extension_checker.py  extension_checker_ichikawa.py  formatter.sh  log.conf  mailsend_checker.py  mailsend_checker_ichikawa.py  monthly.sh  monthly_ichikawa.sh  pyproject.toml  reserve.sh  reserve_book.py  reserve_book_bunkyo.py  reserve_book_calculator.py  reserve_book_ichikawa.py  reserve_book_info_evaluator.py  reserve_book_selector.py  send_line_message.py  test.py  tool_culil.py  (+1 more)
.github/workflows/: daily.yml  enable_workflow.yml
docker/: Dockerfile  docker_build.sh  docker_run.sh
jenkins/: daily.groovy  setup.sh
library_reservation/: main.py
library_reservation/api/: base.py  koto.py
src/: book_classifier.py  booklog_data_handler.py  booklog_manager.py  reserve_book_info_evaluator.py
test/: test_book_classifier.py  test_booklog_manager.py  test_classify_list.py  test_create_owning_or_reserving_booklist.py  test_extension_checker.py  test_reserve_book_calculator.py  test_reserve_book_selector.py  test_send_line_message.py
test/data/: booklog_list.csv  (+5 more)
tools/: tool_culil.py  tool_ichikawa.py
(+8 files in other folders)
